Update to 1.21 and switch to PNJ